8349687: Some more tidying of Nashorn codebase (#25)